...
            "state": "translated",
            "value": "账户"
          }
        }
      }
    },
    "Accounts": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "账户"
          }
...
            "state": "translated",
            "value": "当前账本"
          }
        }
      }
    },
    "Activity": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "动态"
          }
...
            "state": "translated",
            "value": "全部"
          }
        }
      }
    },
    "All Transactions": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "全部交易"
          }
...
            "state": "translated",
            "value": "日历"
          }
        }
      }
    },
    "Cancel": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "取消"
          }
...
            "state": "translated",
            "value": "编辑标签"
          }
        }
      }
    },
    "Edit Transaction": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "编辑交易"
          }
...
